--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="Noah wekesa" />
-
-    {% block 'title' %}
-    <title>CarMax - List Your Car Today!</title>
+    {% block title %}
+ <title>
+</title>
     {% endblock %}
-
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
 
