--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -4,19 +4,27 @@
 {% block content %}
 <div class="d-flex h-100 text-center text-white index">
     <video autoplay muted loop id="myVideo">
-        <source src="{% static 'videos/bg.mp4' %}" type="video/mp4">
-        <!-- Credit: https://www.pexels.com/@kelly-l-1179532 (Pexels.com)-->
+        <source src="{% static 'videos/bg1.mp4' %}" type="video/mp4">
+        <!-- Credit: Video by Taryn Elliott: https://www.pexels.com/video/luxury-sports-cars-passing-on-the-street-5309381/ (Pexels.com)-->
     </video>
     <div class="d-flex w-100 h-100 p-3 mx-auto flex-column main-content">
         <header class="mb-auto">
             <div>
                 <h3 class="float-md-start mb-0">CarMax</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
+                  <ul class="nav">
                     {% if request.user.is_authenticated %}
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     {% else %}
-                    <a class="nav-link" href="">Login</a>
+
+                    <li class="mx-2">
+                    <a class="nav-link" href="">View Cars For sale</a>
+                    </li>
+                    <li>
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
                     {% endif %}
+                    </ul>
                 </nav>
             </div>
         </header>
@@ -27,11 +35,15 @@
             <p class="lead">
             {% if user.is_authenticated %}
              <a href=""
-                    class="btn btn-lg btn-secondary fw-bold border-white bg-white">Browse Available Cars</a>
-             {% else %}
-                 <a href=""
-                    class="btn btn-lg btn-secondary fw-bold border-white bg-white">Register</a>
+                     class="btn btn-lg btn-outline-secondary fw-bold ">Browse Available Cars</a>
+                {% else %}
+             <div class="col">
+<a href=""
+                    class="btn btn-lg btn-outline-secondary fw-bold ">Browse Available Cars</a>
 
+                 <a href=""
+                    class="btn btn-lg btn-outline-secondary fw-bold">Register</a>
+</div>
             {% endif %}
             </p>
         </main>
