styling listng card

--- a/src/templates/NavBar.html
+++ b/src/templates/NavBar.html
@@ -16,19 +16,18 @@
           aria-label="Bootstrap"
         />
       </a>
-      {% if request.user.is_authenticated %}
       <ul
         class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
       >
       <li>
-          <a href="{% url 'register' %}" class="nav-link px-2">Register</a>
         </li> 
       </ul>
 
 
+      {% if request.user.is_authenticated %}
       <ul class="nav text-end">
         <li>
-          <a href="{% url 'profile' %}" class="nav-link px-2">Profile</a>
+          <a href="{% url 'profile' %}" class="nav-link mx-3">Profile</a>
         </li> 
       <li>
         <a type="button" href="{% url 'logout' %}" class="btn btn-danger"
