fixed unbound bug

--- a/src/templates/base2.html
+++ b/src/templates/base2.html
@@ -35,7 +35,7 @@
       if
       message.tags
       %}
-      class="alert alert-{{ message.tags }}"
+      class="alert alert-{{ message.tags }} shadow-lg"
       {%
       endif
       %}
