--- a/src/templates/pages/PostCarForm.html
+++ b/src/templates/pages/PostCarForm.html
@@ -22,7 +22,7 @@
       </div>
 
        </div>
-<button type="button" class="shadow-sm btn btn-lg btn-primary" type="submit">Post</button>
+<button class="shadow-sm btn btn-lg btn-primary" type="submit">Post</button>
     </form>
   </div>
 </div>
