--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -7,7 +7,7 @@
   <div class="col-lg-6 col-md-8 mx-auto">
     <h1 class="fw-light"> CarMax</h1>
     <p class="lead text-muted">The Best place to buy or sell cars made made much easier.</p>
-    <a class="shadow-lg fw-bold btn btn-outline-primary my-2"> Sell Your Car</a>
+    <a class="shadow-lg fw-bold btn btn-outline-primary my-2" href="{% url 'postcar' %}"> Sell Your Car</a>
   </div>
   <div class="col-lg-6 col-md-8 mx-auto">
 <!-- listing filter -->
